[package]
name = "lightning-ffi"
version = "0.1.0"
edition = "2021"
description = "FFI for lightning, which is a framework for Quantitative Finance and Algorithmic Trading"
license = "Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
log = { workspace = true }
lightning-core = { path = "../lightning-core" }
ulid = { workspace = true }